--- a/client/package.json
+++ b/client/package.json
@@ -15,16 +15,22 @@
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.2",
     "@theme-toggles/react": "^4.1.0",
+    "axios": "^1.7.7",
+    "formik": "^2.4.6",
     "framer-motion": "^11.5.6",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
     "vite-tsconfig-paths": "^5.0.1",
+    "yup": "^1.4.0",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
